FFR-Update 06/09/2023